--- a/html_css1/style.css
+++ b/html_css1/style.css
@@ -1,12 +1,94 @@
+body{
+  background-image: url(img/fundo.jpg);
+  background-attachment: fixed;
+}
 #titulo{
   color: red;
 }
 #paragrafo{
   color:seagreen;
 }
-#link{
-  color: blueviolet;
-}
 .texto1{
   color:yellow;
+}
+#cm{
+  background-color: blue;
+  width: 5cm;
+  height: 5cm;
+}
+#mm{
+  background-color: red;
+  width: 5mm;
+  height: 5mm;
+}
+.container{
+  width: 200px;
+  background: red;
+}
+.inside{
+  width: 100px;
+  background: blue;
+}
+
+#base{
+  height: 10px;
+  background-color: red;
+}
+#container2{
+  background-color: blue;
+  color: azure;
+  margin: 10px;
+  padding: 10px;
+}
+
+.borda_padrao{
+  border-width: 5px;
+  border-style: solid;  
+  border-color: brown;
+  /*  border-radius: 5px;*/
+}
+
+.container3{
+  padding: 5px;
+  margin: 15px;
+  background-color: red;
+}
+
+.content{
+  background-color: #ddd;
+  margin: 10px;
+  text-align: center;
+  padding: 5px;
+  
+}
+
+.square{
+  width: 100px;
+  height: 100px;
+  background-color: yellow;
+  border: 10px solid blue;
+  box-sizing: border-box;
+}
+
+.alt_text{
+  color: red;
+  text-align: justify;
+  text-transform: capitalize;
+  text-indent: 35px;
+  text-decoration: underline;
+  letter-spacing: 1.2px;
+  line-height: 100%;
+  word-spacing: 15px;
+  text-shadow: 2px 2px 2px rgb(158, 142, 142) ;
+}
+
+.link_clear{
+  color: red;
+  text-decoration: none;
+}
+
+.alt_font{
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-weight: bold;
 }
